--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: aquamarine;
 }
+.heading{
+  text-align: center;
+}
+.App{
+  text-align: center;
+}
+.myForm{
+  text-align: center;
+  margin-top: 20px;
+  padding: 20px ;
+}
+input{
+  border: 2px solid green;
+  padding: 15px;
+  border-radius: 15px
+}
+button{
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+  background-color: aqua;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
